// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Can merge two 1`] = `
Object {
  "payload": Object {
    "all": Object {
      "config": Object {},
      "data": Object {
        "sheet": Array [
          Array [
            Object {
              "readOnly": true,
              "value": " ",
            },
            Object {
              "readOnly": true,
              "value": "A",
            },
          ],
          Array [
            Object {
              "col": 1,
              "key": "A2",
              "readOnly": true,
              "row": 2,
              "value": "1",
            },
            Object {
              "col": 2,
              "key": "B2",
              "readOnly": true,
              "row": 2,
              "value": "Items",
            },
          ],
        ],
      },
    },
  },
  "structure": "all",
}
`;

exports[`Real-world test 1`] = `
Object {
  "payload": Object {
    "all": Object {
      "config": Object {},
      "data": Object {
        "sheet": Array [
          Array [
            Object {
              "readOnly": true,
              "value": " ",
            },
            Object {
              "readOnly": true,
              "value": "A",
            },
          ],
          Array [
            Object {
              "col": 1,
              "key": "A2",
              "readOnly": true,
              "row": 2,
              "value": "1",
            },
            Object {
              "col": 2,
              "key": "B2",
              "readOnly": true,
              "row": 2,
              "value": "Items",
            },
          ],
        ],
      },
    },
  },
  "structure": "all",
}
`;

exports[`Real-world test sheet 1`] = `
Object {
  "payload": Object {
    "all": Object {
      "config": Object {},
      "data": Object {
        "sheet": Array [
          Array [
            Object {
              "readOnly": true,
              "value": " ",
            },
            Object {
              "readOnly": true,
              "value": "A",
            },
            Object {
              "readOnly": true,
              "value": "B",
            },
            Object {
              "readOnly": true,
              "value": "C",
            },
            Object {
              "readOnly": true,
              "value": "D",
            },
          ],
          Array [
            Object {
              "col": 1,
              "key": "A2",
              "readOnly": true,
              "row": 2,
              "value": "1",
            },
            Object {
              "col": 2,
              "key": "B2",
              "readOnly": true,
              "row": 2,
              "value": "Items",
            },
            Object {
              "col": 3,
              "key": "C2",
              "readOnly": true,
              "row": 2,
              "value": "Anna",
            },
            Object {
              "col": 4,
              "key": "D2",
              "readOnly": true,
              "row": 2,
              "value": "Aliya",
            },
            Object {
              "col": 5,
              "key": "E2",
              "readOnly": true,
              "row": 2,
              "value": "Chen Li",
            },
          ],
          Array [
            Object {
              "readOnly": true,
              "value": 2,
            },
            Object {
              "col": 1,
              "key": "A2",
              "readOnly": true,
              "row": 2,
              "value": Object {
                "li": Object {
                  "liDocument": Object {
                    "createdAt": "2019-01-11T14:09:46.003Z",
                    "createdBy": "ac-select",
                    "createdByUser": "cCY4SjiCMhw7DJ6Ts",
                    "liType": "li-wordSelect",
                    "payload": Object {
                      "color": "#FFFF00",
                      "word": "dreams",
                    },
                  },
                },
              },
            },
            Object {
              "col": 2,
              "key": "B2",
              "readOnly": false,
              "row": 2,
              "value": "ballo",
            },
            Object {
              "col": 3,
              "key": "C2",
              "readOnly": false,
              "row": 2,
              "value": "salol",
            },
            Object {
              "col": 4,
              "key": "D2",
              "readOnly": false,
              "row": 2,
              "value": "hallo",
            },
          ],
          Array [
            Object {
              "readOnly": true,
              "value": 3,
            },
            Object {
              "col": 1,
              "key": "A3",
              "readOnly": true,
              "row": 3,
              "value": Object {
                "li": Object {
                  "liDocument": Object {
                    "createdAt": "2019-01-11T14:09:46.004Z",
                    "createdBy": "ac-select",
                    "createdByUser": "jij3jmHH6s2PTyCiF",
                    "liType": "li-wordSelect",
                    "payload": Object {
                      "color": "#FFFF00",
                      "word": "developers",
                    },
                  },
                },
              },
            },
            Object {
              "col": 2,
              "key": "B3",
              "readOnly": false,
              "row": 3,
              "value": "",
            },
            Object {
              "col": 3,
              "key": "C3",
              "readOnly": false,
              "row": 3,
              "value": "hi",
            },
            Object {
              "col": 4,
              "key": "D3",
              "readOnly": false,
              "row": 3,
              "value": "",
            },
          ],
        ],
      },
    },
  },
  "structure": "all",
}
`;
